test/types/bytes/param/param-errors3.chpl
//cannot coerce bytes to string
param b = b"some bytes";
proc foo(param s: string) {
  writeln(s, " as ", s.type:string);
}
foo(b);

